fix(frontend): repair dark mode color tokens
Fixes #184

--- a/apps/frontend/src/styles/_ref.scss
+++ b/apps/frontend/src/styles/_ref.scss
@@ -106,6 +106,99 @@ $color: (
     90: #9da092,
     100: #95988a,
   ),
+  material: (
+    primary: (
+      0: #000000,
+      10: #102000,
+      20: #1e3700,
+      30: #2e4f00,
+      40: #3f6900,
+      50: #508500,
+      60: #63a103,
+      70: #7cbd2a,
+      80: #96d945,
+      90: #b1f65f,
+      95: #d2ff9c,
+      99: #f9ffe9,
+      100: #ffffff,
+    ),
+    secondary: (
+      0: #000000,
+      10: #151e0b,
+      20: #2a331e,
+      30: #404a33,
+      40: #586249,
+      50: #707b61,
+      60: #8a9579,
+      70: #a4af93,
+      80: #bfcbad,
+      90: #dbe7c8,
+      95: #eaf5d5,
+      99: #f9ffe9,
+      100: #ffffff,
+    ),
+    tertiary: (
+      0: #000000,
+      10: #00201e,
+      20: #003735,
+      30: #1f4e4b,
+      40: #386663,
+      50: #517f7c,
+      60: #6b9996,
+      70: #85b4b0,
+      80: #a0d0cc,
+      90: #bbece8,
+      95: #c9faf6,
+      99: #f2fffd,
+      100: #ffffff,
+    ),
+    error: (
+      0: #000000,
+      10: #410002,
+      20: #690005,
+      30: #93000a,
+      40: #ba1a1a,
+      80: #ffb4ab,
+      90: #ffdad6,
+      100: #ffffff,
+    ),
+    neutral: (
+      0: #000000,
+      4: #0d0f0b,
+      6: #121410,
+      10: #1b1c18,
+      12: #1f201c,
+      17: #292a26,
+      20: #30312c,
+      22: #343530,
+      24: #383a35,
+      30: #464742,
+      40: #5e5f59,
+      50: #777771,
+      60: #91918b,
+      70: #abaca5,
+      80: #c7c7c0,
+      90: #e3e3db,
+      95: #f2f1e9,
+      99: #fdfcf5,
+      100: #ffffff,
+    ),
+    neutral-variant: (
+      0: #000000,
+      10: #191d14,
+      20: #2e3228,
+      30: #44483d,
+      40: #5c6054,
+      50: #75796c,
+      60: #8e9285,
+      70: #a9ad9f,
+      80: #c5c8ba,
+      90: #e1e4d5,
+      95: #eff2e3,
+      99: #fbfeee,
+      100: #ffffff,
+    ),
+  ),
 );
 
 /* Spacing Tokens */
